logs/maltapp.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Jinja2-2.10.dist-info'...
Listing './lib/python3.5/site-packages/Markdown-2.6.11.dist-info'...
Listing './lib/python3.5/site-packages/MarkupSafe-1.0.egg-info'...
Listing './lib/python3.5/site-packages/PyYAML-3.12.egg-info'...
Listing './lib/python3.5/site-packages/Pygments-2.2.0.dist-info'...
Listing './lib/python3.5/site-packages/ibis'...
Listing './lib/python3.5/site-packages/ibis-1.6.0.egg-info'...
Listing './lib/python3.5/site-packages/jinja2'...
Compiling './lib/python3.5/site-packages/jinja2/asyncfilters.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncfilters.py", line 24
    yield item
    ^
SyntaxError: 'yield' inside async function

Compiling './lib/python3.5/site-packages/jinja2/asyncsupport.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncsupport.py", line 35
    yield event
    ^
SyntaxError: 'yield' inside async function

Listing './lib/python3.5/site-packages/libclio-2.3.0.egg-info'...
Listing './lib/python3.5/site-packages/malt'...
Listing './lib/python3.5/site-packages/malt/cli'...
Listing './lib/python3.5/site-packages/malt/ext'...
Listing './lib/python3.5/site-packages/malt/ini'...
Listing './lib/python3.5/site-packages/malt/ini/inc'...
Listing './lib/python3.5/site-packages/malt/ini/lib'...
Listing './lib/python3.5/site-packages/malt/ini/lib/debug'...
Listing './lib/python3.5/site-packages/malt/ini/lib/debug/extensions'...
Listing './lib/python3.5/site-packages/malt/ini/lib/debug/resources'...
Listing './lib/python3.5/site-packages/malt/ini/lib/debug/templates'...
Listing './lib/python3.5/site-packages/malt/ini/lib/phoenix'...
Listing './lib/python3.5/site-packages/malt/ini/lib/phoenix/resources'...
Listing './lib/python3.5/site-packages/malt/ini/lib/phoenix/resources/css'...
Listing './lib/python3.5/site-packages/malt/ini/lib/phoenix/resources/fa'...
Listing './lib/python3.5/site-packages/malt/ini/lib/phoenix/resources/fa/css'...
Listing './lib/python3.5/site-packages/malt/ini/lib/phoenix/resources/fa/fonts'...
Listing './lib/python3.5/site-packages/malt/ini/lib/phoenix/resources/fa/less'...
Listing './lib/python3.5/site-packages/malt/ini/lib/phoenix/resources/fa/scss'...
Listing './lib/python3.5/site-packages/malt/ini/lib/phoenix/resources/images'...
Listing './lib/python3.5/site-packages/malt/ini/lib/phoenix/resources/js'...
Listing './lib/python3.5/site-packages/malt/ini/lib/phoenix/templates'...
Listing './lib/python3.5/site-packages/malt/ini/lib/vanilla'...
Listing './lib/python3.5/site-packages/malt/ini/lib/vanilla/resources'...
Listing './lib/python3.5/site-packages/malt/ini/lib/vanilla/resources/css'...
Listing './lib/python3.5/site-packages/malt/ini/lib/vanilla/resources/js'...
Listing './lib/python3.5/site-packages/malt/ini/lib/vanilla/templates'...
Listing './lib/python3.5/site-packages/malt/ini/src'...
Listing './lib/python3.5/site-packages/malt/ini/src/pages'...
Listing './lib/python3.5/site-packages/malt/ini/src/posts'...
Listing './lib/python3.5/site-packages/maltapp-3.1.2.egg-info'...
Listing './lib/python3.5/site-packages/markdown'...
Listing './lib/python3.5/site-packages/markdown/extensions'...
Listing './lib/python3.5/site-packages/markupsafe'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pygments'...
Listing './lib/python3.5/site-packages/pygments/filters'...
Listing './lib/python3.5/site-packages/pygments/formatters'...
Listing './lib/python3.5/site-packages/pygments/lexers'...
Listing './lib/python3.5/site-packages/pygments/styles'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/shortcodes-2.4.0.egg-info'...
Listing './lib/python3.5/site-packages/syntex'...
Listing './lib/python3.5/site-packages/syntex-0.17.0.egg-info'...
Listing './lib/python3.5/site-packages/yaml'...
Listing './share'...
Listing './share/python-wheels'...
